@startuml

package com.example.gaussfactory.model {
    class Component {
        String name
    }

    class Ball extends Component {
        int position
        int currentLevel
        Random random
        + moveLeft()
        + moveRight()
        + moveRandom()
        + fall()
        + getPosition()
        + getCurrentLevel()
        + incrementLevel()
        + setSpeed(int speed)
    }
}

package com.example.gaussfactory.service {
    class DataLoader {
        + List<Double> loadData(String filepath)
    }

    class ComponentAssemblerService {
        + assembleComponent()
    }

    class WorkStationService {
        + produceComponent(Component component)
    }

    class SimulationService {
        + startSimulation()
        + resetSimulation()
        + stopSimulation()
        + setSimulationSpeed(int speed)
        + getAllData()
        + getBalls()
        + initializeBalls(int numberOfBalls)
        + setSimulationData(List<Double> data)
        + List<Double> getBallPositions()

    }
}

package com.example.gaussfactory.factory {
    class ComponentFactory {
        + createComponent(String type)
    }
}

package com.example.gaussfactory.visualization {
    class GaussChart {
        HistogramDataset dataset
        List<Double> currentData
        ChartPanel chartPanel
        SimulationController simulationController
        - updateDataset()
        - startSimulation()
        + showGaussChart(SimulationController simulationController)
    }
}

package com.example.gaussfactory.synchronization {
    class SyncManager {
        - Lock lock
        + performSynchronizedTask(Runnable task)
    }
}

package com.example.gaussfactory.config {
    class ThreadConfig {
        + ExecutorService executorService()
    }

    class FirebaseConfig {
        - String credentialsPath
        + Firestore firestore()
    }

    class WorkStationService {
        + int maxComponents()
    }

    class ComponentAssemblerService {
        + BlockingQueue<Component> componentQueue()
    }
}

package com.example.gaussfactory.controller {
    class ProductionController {
        + startProduction()
    }

    class SimulationController {
        + initializeSimulation(List<Double> data)
        + startSimulation()
        + setSimulationSpeed(int speed)
        + List<Double> getAllData()
        + startSimulationStep()
        + getBallsLeft()
    }
}

ComponentFactory --|> Ball
ComponentAssemblerService --> Component
WorkStationService --> Component
SyncManager --> SimulationService
SimulationService --> GaussChart
SimulationService --> Ball
GaussChart --> SimulationController
SimulationController --> SimulationService
SimulationController --> SyncManager
FirebaseConfig --> Firestore
SimulationService --> FirebaseConfig
WorkStationService --> SyncManager
ComponentAssemblerService --> BlockingQueue

@enduml
